feat(jdskill): add type field for jdskill and update autocomplete search jdskill